# aftp-server

./: .gitignore  Cargo.toml  Rocket.toml
src/: main.rs  utils.rs
src/auth/: id_auth.rs  mod.rs
src/fslayer/: afs.rs  api.rs  fsprovider.rs  mod.rs
src/fslayer/native/: hashmapfs.rs  inmemoryfs.rs  mod.rs
