[package]
name = "aftp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-traits = "0.0.0"
dotenv = "0.15.0"
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["v4"] }
